added h1 & changeTitle func

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         </label>
       </div>
     </header>
+    <h1>Light Theme</h1>
     <div class="container">
       <section class="content">
         <h4>Section Heading</h4>
